# pinky-care

./: .gitignore  README.md  run-demo.sh
backend/: .pylintrc  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deliveries.py
backend/app/models/: delivery.py
backend/app/services/: broadcaster.py  frame_source.py  store.py  transitions.py  yolo.py
backend/tests/: conftest.py  test_deliveries.py  test_image_upload.py  test_nurse_return_command.py  test_nurse_timeout.py  test_sse.py  test_yolo.py  test_yolo_auto_trigger.py
docs/: api-spec.md  delivery-scenario.md  robot-integration.md  ros2-coordination.md  yolo-plan.md
docs/diagrams/: README.md  _excalidraw.py  _gen_architecture.py  _gen_delivery_sequence.py  _gen_demo_scenario.py  _gen_state_transitions.py  _gen_yolo_failure_reasons.py  _preview.py  architecture.excalidraw  delivery-sequence.excalidraw  demo-scenario.excalidraw  scenario-unified-flow.excalidraw  state-transitions.excalidraw  yolo-failure-reasons.excalidraw
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AwaitingNurseModal.tsx  DeliveryStatusStepper.tsx  ItemSelector.tsx  NurseWaitPanel.tsx  RoomSelector.tsx
frontend/src/constants/: options.ts
frontend/src/hooks/: useDeliveryStatus.ts
ros2_ws/: .pylintrc  README.md
tools/: camera.py  camera_fixed.py  robot_sim.py
yolo/: README.md  capture_webcam.py  detect_ox.py  train_predict.py  upload_frames.py
yolo/notebooks/: 01_capture.ipynb  02_train.ipynb
(+18 files in other folders)
