[project]
name = "pinky-care-backend"
version = "0.1.0"
description = "PinkyCare backend — delivery orchestration, state transitions, SSE, YOLO verification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
yolo = [
    # 실제 YOLO 추론 시에만 필요. 개발·테스트에서는 없어도 됨 (yolo.py가 lazy import).
    "ultralytics>=8.4",
    "pillow>=10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
